feat: primordial endpoint
